syntax = "proto3";
package VoroshilovMax.bettery.funds;

option go_package = "github.com/VoroshilovMax/bettery/x/funds/types";

import "gogoproto/gogo.proto";

message MintBet {
  string creator = 1;
  uint64 id = 2;
  string reciever = 3;
  string amount = 4; 
  int64 userId = 5;
}